# PipeSpy

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: dllmain.cpp
src/pipe_spy/: pipe_spy.cpp  pipe_spy.hpp
